--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi Aplicación</title>
+  <h1>Juego</h1>
+
   <style>
     body {
       margin: 0;
