--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
   </form>
 
   <canvas id="gameCanvas" width="400" height="400"></canvas>
+<canvas width='1080' height='720' id='hexmap'></canvas>
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="client.js"></script>
