--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi Juego Multijugador</title>
   <style>
     body {
       margin: 0;
@@ -13,12 +12,20 @@
       align-items: center;
       height: 100vh;
       background-color: #0000FF;
+      position: relative; /* Añade esta línea para posicionar correctamente los hexágonos */
     }
     form {
       text-align: center;
+      z-index: 1; /* Añade esta línea para posicionar correctamente los hexágonos */
     }
     #gameCanvas {
-      display: none; /* Ocultar el canvas inicialmente */
+      display: none;
+      position: absolute; /* Añade esta línea para posicionar correctamente los hexágonos */
+      z-index: 1; /* Añade esta línea para posicionar correctamente los hexágonos */
+    }
+    .hexagons {
+      position: absolute;
+      z-index: 0;
     }
   </style>
 </head>
@@ -31,6 +38,19 @@
 
   <canvas id="gameCanvas" width="400" height="400"></canvas>
 
+  <!-- Agrega la capa para los hexágonos -->
+  <div class="hexagons">
+    <div class="container">
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+    </div>
+  </div>
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="client.js"></script>
   <script>
@@ -39,13 +59,8 @@
       const gameCanvas = document.getElementById('gameCanvas');
 
       nameForm.addEventListener('submit', function (event) {
-        event.preventDefault(); // Evitar el envío del formulario
-
+        event.preventDefault();
         const playerName = document.getElementById('playerName').value;
-
-        // Aquí puedes enviar playerName al servidor si es necesario
-
-        // Ocultar el formulario y mostrar el canvas
         nameForm.style.display = 'none';
         gameCanvas.style.display = 'block';
       });
@@ -53,4 +68,5 @@
   </script>
 </body>
 </html>
+
 
