--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   <form id="nameForm">
     <label for="playerName">Introduce tu nombre:</label>
     <input type="text" id="playerName" name="playerName" required>
-    <button type="submit">Aceptar</button>
+    <button type="submit">Aceptar2</button>
   </form>
 
   <canvas id="gameCanvas" width="400" height="400"></canvas>
