--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,48 @@
     .hexagons {
       position: absolute;
       z-index: 0;
+      top: 0;
+      left: 0;
+      width: 400px; /* Ajusta según el tamaño de tu juego */
+      height: 400px; /* Ajusta según el tamaño de tu juego */
+    }
+    .container {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      width: 100%;
+      height: 100%;
+    }
+
+    .block {
+      grid-area: 1/1;
+      clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0 50%);
+      background-color: #fff2aa;
+      box-shadow: inset 0 0 50px 25px #ff9a0073;
+    }
+
+    .container > :nth-child(1) {
+      transform: translateY(100%);
+    }
+
+    .container > :nth-child(2) {
+      transform: translateY(-100%);
+    }
+
+    .container > :nth-child(3) {
+      transform: translate(-50%, -75%);
+    }
+
+    .container > :nth-child(4) {
+      transform: translate(50%, -75%);
+    }
+
+    .container > :nth-child(5) {
+      transform: translate(50%, 75%);
+    }
+
+    .container > :nth-child(6) {
+      transform: translate(-50%, 75%);
     }
   </style>
 </head>
@@ -33,7 +75,7 @@
   <form id="nameForm">
     <label for="playerName">Introduce tu nombre:</label>
     <input type="text" id="playerName" name="playerName" required>
-    <button type="submit">Aceptar2</button>
+    <button type="submit">Aceptar3</button>
   </form>
 
   <canvas id="gameCanvas" width="400" height="400"></canvas>
@@ -68,5 +110,4 @@
   </script>
 </body>
 </html>
-
 
