--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,10 @@
   </form>
 
   <canvas id="gameCanvas" width="400" height="400"></canvas>
+    <svg id="hexagonGroup"></svg>
 
+
+  
   <script src="/socket.io/socket.io.js"></script>
   <script src="client.js"></script>
   <script>
