--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   </form>
 
   <canvas id="gameCanvas" width="400" height="400"></canvas>
-    <svg id="hexagonGroup"></svg>
+<svg id="hexagonGroup" style="background-color: #ffffff;"></svg>
 
 
   
