--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
     #gameCanvas {
       display: none; /* Ocultar el canvas inicialmente */
     }
+    #hexagonGroup {
+      display: none; /* Ocultar inicialmente */
+    }
   </style>
 </head>
 <body>
@@ -51,6 +54,8 @@
         // Ocultar el formulario y mostrar el canvas
         nameForm.style.display = 'none';
         gameCanvas.style.display = 'block';
+        hexagonGroup.style.display = 'block';
+
       });
     });
   </script>
