--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   </form>
 
   <canvas id="gameCanvas" width="1" height="1"></canvas>
-<svg id="hexagonGroup" style="background-color: #ffffff;"></svg>
+<svg id="hexagonGroup" style="background-color: #ffffff;" width="1000" height="1000"></svg>
 
 
   
