--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
     #hexagonGroup {
       display: none; /* Ocultar inicialmente */
     }
+    #bluePoint {
+      display: none; /* Ocultar inicialmente */
+    }
   </style>
 </head>
 <body>
@@ -34,6 +37,7 @@
 
   <canvas id="gameCanvas" width="1" height="1"></canvas>
 <svg id="hexagonGroup" style="background-color: #ffffff;" width="1000" height="1000"></svg>
+  <circle id="bluePoint" cx="170" cy="170" r="8" fill="blue" />
 
 
   
@@ -55,6 +59,8 @@
         nameForm.style.display = 'none';
         gameCanvas.style.display = 'block';
         hexagonGroup.style.display = 'block';
+        bluePoint.style.display = 'block';
+
 
       });
     });
