--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
   </form>
 
   <canvas id="gameCanvas" width="1" height="1"></canvas>
-<svg id="hexagonGroup" style="background-color: #ffffff;" width="400" height="600"></svg>
+<svg id="hexagonGroup" style="background-color: #ffffff;" ></svg>
   <circle id="bluePoint" cx="170" cy="170" r="8" fill="blue" />
 
 
