Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <button type="submit">Aceptar</button>
   </form>
 
-  <canvas id="gameCanvas" width="1" height="1"></canvas>
+  <canvas id="gameCanvas" width="400" height="100"  style="background-color: #ff0000;"    ></canvas>
 <svg id="hexagonGroup" style="background-color: #ffffff;" ></svg>
   <circle id="bluePoint" cx="170" cy="170" r="8" fill="blue" />
 
