Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
       display: none; /* Ocultar el canvas inicialmente */
     }
     #hexagonGroup {
+
+
+top: 100px; 
       display: none; /* Ocultar inicialmente */
     }
     #bluePoint {
