Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,21 @@
   <style>
     body {
       margin: 0;
-      overflow: hidden;
       display: flex;
       /*
       justify-content: center;
       align-items: center;
       height: 100vh;
+
+overflow: hidden;
+
+
+
       */
+
+
+ height: 100vh;
+
       background-color: #0000FF;
     }
     form {
