Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@ overflow: hidden;
       */
 
 
- height: 100vh;
+ 
 
       background-color: #0000FF;
     }
@@ -32,7 +32,7 @@ overflow: hidden;
     }
     #hexagonGroup {
 
-
+position: absolute;
 top: 100px; 
       display: none; /* Ocultar inicialmente */
     }
