--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+⁸<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -32,8 +32,15 @@ overflow: hidden;
     }
     #hexagonGroup {
 
+
+
+top: 0;
+  left: 0;
+  width: 100vw; /* Ancho del 100% del viewport */
+  height: 100vh;
+
 position: absolute;
-top: 100px; 
+
       display: none; /* Ocultar inicialmente */
     }
     #bluePoint {
