--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,8 @@ position: absolute;
 
   
   <script src="/socket.io/socket.io.js"></script>
-  <script src="client.js"></script>
+    <script src="client.js" defer></script>
+
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const nameForm = document.getElementById('nameForm');
