--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@ position: absolute;
         
 
 
-                socket.on('playerNameAssigned', (assignedName) => {
+                socket.on('playerNameEntered', (playerName) => {
 
 
                   //SOCKET.ON SIGNIFICA QUE ESTA ESCUCHANDO AL SERVIDOR. Son datos que vienen del servidor.
