--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@ socket.emit('assignColor', playerName);
       nameForm.style.display = 'none';
       gameCanvas.style.display = 'block';
       hexagonGroup.style.display = 'block';
-      bluePoint.style.display = 'block';
+    //  bluePoint.style.display = 'block';
 
       // Emitir el evento 'playerNameEntered' al servidor
       socket.emit('playerNameEntered', playerName);
