Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -203,6 +203,10 @@ socket.on('assignColor', function (playerName) {
 	console.log(`Asssign Color: ${assignedColors}`);
 	
 	//document.dispatchEvent(playerNameReadyEvent);
+
+
+
+socket.emit('updatePlayersRequest');
 	
 	});
 
