Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -245,7 +245,7 @@ socket.on('updatePlayers', function (updatedPlayers) {
   	textElement2.setAttribute('text-anchor', 'middle');
   	textElement2.setAttribute('fill', 'green');
   	textElement2.setAttribute('font-size', '14px');
-	textElement2.textContent = assignedName;
+	textElement2.textContent = player.nombre;
         hexagonGroup.appendChild(textElement2);
 
 	//LOGS		
