Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -250,7 +250,7 @@ socket.on('updatePlayers', function (updatedPlayers) {
 
 	//LOGS		
 	console.log(`NOMBREEEEEE2E: ${assignedName}`);
-	console.log(`NAAAAMEEEEE2E: ${player.name}`);
+	console.log(`NAAAAMEEEEE2E: ${player.nombre}`);
 	console.log(`PlayerID!!!!!: ${playerId}, ${player.color}`);
 	console.log(`Nombre Nuevo!!!!!: ${playerId}, ${player.nombre}`);
 
