Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -153,6 +153,13 @@ console.log(`Comprobar error2: ${playerName}`);
 
 	 /////////
 const playerNameReadyEvent = new Event('playerNameReady');
+
+
+
+console.log(`Comprobar erro3r: ${playerName}`);
+
+	    
+
   let connectedUsers = 0;
   let isMoving = false
   let FirstMove = true
