--- a/public/index.html
+++ b/public/index.html
@@ -603,6 +603,20 @@ function drawRandomVerticesOnHexagons() {
     points.forEach((point, index) => {
       if (selectedIndices.has(index)) {
         const [x, y] = point.split(',').map(Number);
+
+
+
+const vertexDot = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
+      vertexDot.setAttribute('cx', x);
+      vertexDot.setAttribute('cy', y);
+      vertexDot.setAttribute('r', '3');
+      vertexDot.setAttribute('fill', 'green');
+
+      hexagonGroup.appendChild(vertexDot);
+
+
+
+
         console.log(`Vértice (${x}, ${y})`);
       }
     });
