Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -446,9 +446,16 @@ function createHexagons() {
 
 
 
-const randomValues = getRandomValues(1, 500, 30);
+//const randomValues = getRandomValues(1, 500, 30);
 
-console.log(randomValues);
+//console.log(randomValues);
+
+
+
+cost randomV = printRandomValue(1, 500);
+
+console.log(randomV);
+
 
     const hexagonSize = 50;
     const numRows = 20;
@@ -693,6 +700,13 @@ const vertexDot = document.createElementNS('http://www.w3.org/2000/svg', 'circle
 
 
 
+function printRandomValue(min, max) {
+  const randomValue = Math.floor(Math.random() * (max - min + 1)) + min;
+  console.log(randomValue);
+}
+
+// Llama a esta función para imprimir un valor aleatorio entre 1 y 500
+printRandomValue(1, 500);
 
     /////////////////////////////////////////////////
 	
