Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -521,7 +521,7 @@ points.push(coordinate);
 if(randomV2 == i)
 {
 
-console.log(`Coordenada: (${coordinate})`);
+console.log(`Coordenada: (    ${pointX},${pointY}  )`);
 }
 
 
