Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -710,11 +710,11 @@ const vertexDot = document.createElementNS('http://www.w3.org/2000/svg', 'circle
 
 function printRandomValue(min, max) {
   const randomValue = Math.floor(Math.random() * (max - min + 1)) + min;
-  console.log(randomValue);
+ // console.log(randomValue);
 }
 
 // Llama a esta función para imprimir un valor aleatorio entre 1 y 500
-printRandomValue(1, 500);
+//printRandomValue(1, 500);
 
     /////////////////////////////////////////////////
 	
