Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -518,7 +518,7 @@ const coordinate = `${pointX},${pointY}`;
 points.push(coordinate);
 
 
-if(randomV2 == i)
+if(randomV2 === i)
 {
 
 console.log(`Coordenada: (    ${pointX},${pointY}  )`);
