Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -161,6 +161,11 @@ socket.on('updatePlayers', function (updatedPlayers) {
       	playerElement.setAttribute('cy', player.y);
 	hexagonGroup.appendChild(playerElement);
 
+
+console.log(`ID: ${playerId}, ${player.x}
+, ${player.y}`);
+
+
 	//TEXT ELEMENT
 		
 	const textElement2 = document.createElementNS('http://www.w3.org/2000/svg', 'text');
