Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -746,7 +746,7 @@ function getCoordinatesOfVertex(hexagons, targetVertexNumber) {
 }
 
 // Llamada a la función con el número del vértice deseado (en este caso, 33)
-drawVerticesOnHexagons(document.querySelectorAll('#hexagonGroup polygon'), 33);
+ getCoordinatesOfVertex(document.querySelectorAll('#hexagonGroup polygon'), 33);
 
     /////////////////////////////////////////////////
 	
