--- a/public/index.html
+++ b/public/index.html
@@ -297,7 +297,7 @@ function animateNameLocally(circleElement, start, end, txt) {
 createHexagons();
 
 
-drawRandomVerticesOnHexagons();
+//drawRandomVerticesOnHexagons();
 
 
 
@@ -337,9 +337,6 @@ function moveBluePoint( clickX, clickY ) {
 
 
 
-// Supongamos que newPosition es un objeto con las nuevas coordenadas
-const newPosition = { x:  destinationX , y: destinationY };
-socket.emit('updatePosition', newPosition);
 
 
 
@@ -384,6 +381,14 @@ function animateBluePoint(destinationX, destinationY) {
 		
 	console.log('Mov finalizado');
 	isMoving = false
+
+
+
+// Supongamos que newPosition es un objeto con las nuevas coordenadas
+const newPosition = { x:  newX , y: newY };
+socket.emit('updatePosition', newPosition);
+
+
 	}
     	}
 	requestAnimationFrame(update);
