Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -303,7 +303,15 @@ createHexagons();
 //MOVE BLUE POINT !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 //////////////////////////////////////////////////////////////////////	
 	
-function moveBluePoint( clickX, clickY ) {      
+function moveBluePoint( clickX, clickY ) {   
+
+
+
+
+   
+drawRandomVerticesOnHexagons();
+
+
 	
 	//socket.emit('updatePlayers'); // Emitir un nuevo evento al servidor
 
